--- a/Working-With-Files.vcxproj
+++ b/Working-With-Files.vcxproj
@@ -130,7 +130,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="CelsiusTemperature.txt" />
     <Text Include="FahrenheitTemperature.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
