--- a/Working-With-Files.vcxproj.filters
+++ b/Working-With-Files.vcxproj.filters
@@ -21,5 +21,11 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="FahrenheitTemperature.txt" />
+    <Text Include="CelsiusTemperature.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
